# agent-battler

./: .gitignore  AGENT_INTEGRATION_GUIDE.md  ANALYSIS_COMPLETE.md  API_REFERENCE.md  ASCIICINEMA_FEATURE_SUMMARY.md  ASCIICINEMA_IMPLEMENTATION.md  ASCIICINEMA_MIGRATION.md  ASCIICINEMA_QUICK_REFERENCE.md  ASCIICINEMA_RESEARCH.md  CLI_TEST_RESULTS.md  CLI_WRAPPER_GUIDE.md  COMMENTS_FEATURE.md  COMMENTS_QUICK_REFERENCE.md  COMPARISON.md  DEPLOYMENT_CHECKLIST.md  FEATURE_PRIORITIZATION.md  FINAL_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_GUIDELINES.md  IMPLEMENTATION_SUMMARY.md  MARKDOWN_RENDERING.md  MARKET_ANALYSIS.md  PRODUCT_ROADMAP.md  PRODUCT_VISION_SUMMARY.md  PROXY_LIMITATIONS.md  PYTHON_CLI_README.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  README_CLEAN_AUGGIE_LOG.md  README_RECORDING_FEATURE.md  REAL_AGENT_EXECUTION.md  RECORDING_CLI_GUIDE.md  RECORDING_DOCUMENTATION_INDEX.md  RECORDING_FEATURE_COMPLETE.md  RECORDING_FEATURE_README.md  RECORDING_IMPLEMENTATION_GUIDE.md  RECORDING_QUICK_REFERENCE.md  ROADMAP_EXECUTIVE_SUMMARY.md  ROADMAP_INDEX.md  (+11 more)
.open-next/assets/: BUILD_ID
.open-next/dynamodb-provider/: dynamodb-cache.json  open-next.config.mjs
agent_battler/: __init__.py  agents.py  auggie_wrapper.js  cli.py  config.example.yaml  proxy_manager.py
app/: page.tsx
components/: AsciinemaPlayer.tsx  CommentSection.tsx  ConvexClientProvider.tsx  IssueCard.tsx  MarkdownRenderer.tsx  Navbar.tsx  RecordingDisplay.tsx  RecordingUpload.tsx
convex/: auth.ts  codingAgents.ts  comments.ts  dev.ts  github.ts  issues.ts  notifications.ts  pullRequests.ts  recordings.ts  schema.ts  users.ts
lib/: cli.ts  mitmproxy-addon.py  proxy-wrapper.ts  recordingUtils.ts
scripts/: add-test-user.ts  record_agent_session.py
(+71 files in other folders)
