[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-battler"
version = "0.1.0"
description = "CLI wrapper for capturing network requests from AI coding agents using mitmproxy"
readme = "CLI_WRAPPER_GUIDE.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Agent Battler Contributors"}
]
keywords = ["ai", "coding-agents", "mitmproxy", "network-capture", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Tools",
]

dependencies = [
    "mitmproxy>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
agent-battler = "agent_battler.cli:main"

[project.urls]
Homepage = "https://github.com/aj47/agent-battler"
Repository = "https://github.com/aj47/agent-battler"
Issues = "https://github.com/aj47/agent-battler/issues"

[tool.setuptools]
packages = ["agent_battler"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

